--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   <li class="active"><a href="index.html" class="nav-link">Home</a></li>
                   <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
                   <li><a href="about.html" class="nav-link">About</a></li>
-                  <li><a href="services.html" class="nav-link">Services</a></li>
+                  <li><a href="services.html" class="nav-link">Services‚±‚±‚¢‚ç‚È‚¢‚©‚à</a></li>
                   <li><a href="blog.html" class="nav-link">Blog</a></li>
                   <li><a href="contact.html" class="nav-link">Contact</a></li>
                 </ul>
